# Renesas_VSCode_Extensions_tips_for_Renesas_CC_compilers

./: LICENSE
CMake_CC_with_e2studio/: .gitignore
CMake_CC_with_e2studio/RH850F1KM_SampleProject/: .clangd  CMakeLists.txt  SC_CS+CCRH.mtpj  SC_CS+CCRH.scfg  SC_CS+CCRH_build_options.txt  cross.cmake  iodefine.h
CMake_CC_with_e2studio/RH850F1KM_SampleProject/cmake/: renesas-rh850-ccrh-toolchain-ex1.cmake  renesas-rh850-ccrh-toolchain-ex11.cmake  renesas-rh850-ccrh-toolchain-ex12.cmake  renesas-rh850-ccrh-toolchain-ex13.cmake  renesas-rh850-ccrh-toolchain-ex14.cmake  renesas-rh850-ccrh-toolchain-ex15.cmake  (+8 more)
CMake_CC_with_e2studio/rl78g23_fpb/: .clangd  CMakeLists.txt  cross.cmake
CMake_CC_with_e2studio/rl78g23_fpb/cmake/: renesas-rl78-ccrl-toolchain-ex1.cmake  renesas-rl78-ccrl-toolchain-ex11.cmake  renesas-rl78-ccrl-toolchain-ex12.cmake  renesas-rl78-ccrl-toolchain-ex12xx.cmake  renesas-rl78-ccrl-toolchain-ex13.cmake  renesas-rl78-ccrl-toolchain-ex14.cmake  renesas-rl78-ccrl-toolchain-ex14xx.cmake  renesas-rl78-ccrl-toolchain-ex15.cmake  renesas-rl78-ccrl-toolchain-ex16.cmake  renesas-rl78-ccrl-toolchain-ex16xx.cmake  renesas-rl78-ccrl-toolchain-ex2.cmake  renesas-rl78-ccrl-toolchain-ex2xx.cmake  renesas-rl78-ccrl-toolchain-ex3.cmake  renesas-rl78-ccrl-toolchain-ex4.cmake  renesas-rl78-ccrl-toolchain-ex4xx.cmake  renesas-rl78-ccrl-toolchain-ex5.cmake  renesas-rl78-ccrl-toolchain-ex6.cmake  renesas-rl78-ccrl-toolchain-ex6xx.cmake  todo-memo-test-renesas-cmake.txt
CMake_CC_with_e2studio/rl78g23_fpb/cmake/Modules/Compiler/: RENESAS-C.cmake  RENESAS-CXX.cmake  RENESAS-CompilerWrapper.cmake  RENESAS-FindBinUtils.cmake  RENESAS.cmake  RenesasCC-ASM.cmake  RenesasCC-C.cmake  RenesasCC-CompilerWrapper.cmake  RenesasCC-LibGeneratorWrapper.cmake
CMake_CC_with_e2studio/rl78g23_fpb/cmake/Modules/Platform/: Generic-RenesasCC-Initialize.cmake
CMake_CC_with_e2studio/rl78g23_fpb/dbg_rspf_src/lib2/: copy_file.cmd
CMake_CC_with_e2studio/rl78g23_fpb/dbg_rspf_src/main/: copy_file.cmd
CMake_CC_with_e2studio/rl78g23_fpb/lib_src/lib1/: sample_lib1a_c.c
CMake_CC_with_e2studio/rl78g23_fpb/lib_src/lib2/: sample_lib2a_c.c  sample_lib2b_c.c
CMake_CC_with_e2studio/rl78g23_fpb/src/: language_extensions.c  language_extensions_and_standard.c  language_extensions_and_standard_cpp.cpp  rl78g23_fpb_main.c  rl78g23fpbdef.h  test_dep_scan_etc_asm.asm  test_dep_scan_etc_asm.inc  test_dep_scan_etc_c.c
CMake_CC_with_e2studio/rl78g23_fpb/src/smc_gen/Config_INTC/: Config_INTC.c  Config_INTC.h  Config_INTC_user.c
CMake_CC_with_e2studio/rl78g23_fpb/src/smc_gen/Config_ITL0/: Config_ITL0.c  Config_ITL0.h  Config_ITL0_user.c
CMake_CC_with_e2studio/rl78g23_fpb/src/smc_gen/Config_PORT/: Config_PORT.c  Config_PORT.h  Config_PORT_user.c
CMake_CC_with_e2studio/rl78g23_fpb/src/smc_gen/Config_SMS/: Config_SMS.c  Config_SMS.h  Config_SMS_ASM.smsasm  Config_SMS_user.c
CMake_CC_with_e2studio/rl78g23_fpb/src/smc_gen/general/: r_cg_intc.h  r_cg_itl.h  r_cg_itl_common.c  r_cg_itl_common.h  r_cg_itl_common_user.c  r_cg_lvd.h  r_cg_lvd_common.c  r_cg_lvd_common.h  r_cg_lvd_common_user.c  r_cg_macrodriver.h  r_cg_port.h  r_cg_sms.h  r_cg_systeminit.c  r_cg_userdefine.h  r_smc_entry.h
CMake_CC_with_e2studio/rl78g23_fpb/src/smc_gen/r_config/: r_bsp_config.h
CMake_CC_with_e2studio/tb_rx65n/: .clangd  CMakeLists.txt  cross.cmake
CMake_CC_with_e2studio/tb_rx65n/cmake/: renesas-rx-ccrx-toolchain-ex1.cmake  renesas-rx-ccrx-toolchain-ex11.cmake  renesas-rx-ccrx-toolchain-ex12.cmake  renesas-rx-ccrx-toolchain-ex12xx.cmake  renesas-rx-ccrx-toolchain-ex13.cmake  renesas-rx-ccrx-toolchain-ex14.cmake  renesas-rx-ccrx-toolchain-ex14xx.cmake  renesas-rx-ccrx-toolchain-ex15.cmake  renesas-rx-ccrx-toolchain-ex16.cmake  renesas-rx-ccrx-toolchain-ex16xx.cmake  renesas-rx-ccrx-toolchain-ex2.cmake  renesas-rx-ccrx-toolchain-ex2xx.cmake  renesas-rx-ccrx-toolchain-ex3.cmake  renesas-rx-ccrx-toolchain-ex4.cmake  renesas-rx-ccrx-toolchain-ex4xx.cmake  renesas-rx-ccrx-toolchain-ex5.cmake  renesas-rx-ccrx-toolchain-ex6.cmake  renesas-rx-ccrx-toolchain-ex6xx.cmake  todo-memo-impl-renesas-cmake.txt
CMake_CC_with_e2studio/tb_rx65n/cmake/Modules/Compiler/: RENESAS-ASM.cmake  RENESAS-AssemblerWrapper.cmake  RENESAS-C.cmake  RENESAS-CXX.cmake  RENESAS-CompilerWrapper.cmake  RENESAS-DetermineCompiler.cmake  RENESAS-FindBinUtils.cmake  RENESAS-LibGeneratorWrapper.cmake  RENESAS-LinkerWrapper.cmake  RenesasCC-FindBinUtils.cmake  RenesasCC-LinkerWrapper.cmake  RenesasCC.cmake
CMake_CC_with_e2studio/tb_rx65n/cmake/Modules/Platform/: Generic-RenesasCC-Initialize.cmake  Generic-RenesasCC.cmake
CMake_CC_with_e2studio/tb_rx65n/dbg_rspf_src/: CMakeLists_DEBUG_RSP_FILE.txt
CMake_CC_with_e2studio/tb_rx65n/dbg_rspf_src/lib3/: copy_file.cmd
CMake_CC_with_e2studio/tb_rx65n/lib_src/lib1/: sample_lib1b_c.c
CMake_CC_with_e2studio/tb_rx65n/lib_src/lib1/inc/: sample_lib1.h
CMake_CC_with_e2studio/tb_rx65n/lib_src/lib2/inc/: sample_lib2.h
CMake_CC_with_e2studio/tb_rx65n/lib_src/lib3/: sample_lib3a_c.c
CMake_CC_with_e2studio/tb_rx65n/lib_src/lib3/inc/: sample_lib3.h
CMake_CC_with_e2studio/tb_rx65n/src/: language_extensions.c  language_extensions_and_standard.c  language_extensions_and_standard_cpp.cpp  language_standard.cpp  pre_include.h  sample_asm.src  sample_cpp.cpp  tb_rx65n.c  test_dep_scan_etc_asm.src  test_dep_scan_etc_c.c  test_dep_scan_etc_c.h
CMake_CC_with_e2studio/tb_rx65n/src/smc_gen/general/: r_cg_hardware_setup.c  r_cg_macrodriver.h  r_smc_entry.h  r_smc_interrupt.c  r_smc_interrupt.h
CMake_CC_with_e2studio/tb_rx65n/src/smc_gen/r_config/: r_bsp_config.h
CMake_CC_with_e2studio/tb_rx65n/src/smc_gen/r_pincfg/: Pin.c
CMake_CC_with_e2studio/testall/: primary.bat  primary10.bat  with_dbg_rspf.bat
e2studio_makefile_CC_for_no_Renesas_VSCode_Extensions/visualstudio_helper_files_rl78/: CppProperties.json
e2studio_makefile_CC_for_no_Renesas_VSCode_Extensions/visualstudio_helper_files_rx/: CppProperties.json
e2studio_makefile_CC_for_no_Renesas_VSCode_Extensions/vscode_helper_files_rl78/: Visual Studio MCU.elf
(+32 files in other folders)
